--- a/github/workflows/test.yml
+++ b/github/workflows/test.yml
@@ -1,29 +1,20 @@
-name: tests
-
-on:
-  push:
-    branches:
-      - main  # 仅在推送到main分支时触发，可以根据需要修改
-
+name: test
+on: push
 jobs:
   run_tests:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v2
-
       - name: Set up JDK 17
         uses: actions/setup-java@v1
         with:
-          java-version: 17  # 确保这个版本与你的 pom.xml 中的版本一致
-
+          java-version: 17
       - name: Cache Maven packages
         uses: actions/cache@v2
         with:
           path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml')
           restore-keys: ${{ runner.os }}-m2
-
-      - name: Run tests with Maven
-        run: mvn -B test --file pom.xml  # 确保pom.xml路径正确
+      - name: Run test with Maven
+        run: mvn -B test --file pom.xml
